add new case for 4.4.5

--- a/numpy_demo.ipynb
+++ b/numpy_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,6 +1740,56 @@
    ],
    "source": [
     "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 1.68732724, -0.89824926,  0.22365431,  0.01756238],\n",
+       "        [ 0.47557558, -1.27479993, -0.31525951,  1.29513806],\n",
+       "        [-1.88029552,  0.24286742, -1.46028117,  1.5043946 ]]),\n",
+       " array([[ 2.18475963,  0.36220713,  0.39239958, -1.12857616],\n",
+       "        [ 1.13132422, -0.85540932,  1.16799523,  0.54550168],\n",
+       "        [-1.21095194,  0.90119383,  0.08721608,  0.86776948]]),\n",
+       " array([[-2.05364655,  0.13753504,  0.31307656,  0.31322054],\n",
+       "        [ 1.41944291, -1.88897691,  1.33313537,  0.08852168],\n",
+       "        [-0.01917617,  0.78296624, -0.6880465 ,  0.37967695]]),\n",
+       " array([[ 0.76888217, -1.15225524,  0.09459431,  0.24375716],\n",
+       "        [ 1.8179535 , -0.99422029,  0.16946747, -0.54228606],\n",
+       "        [-0.70609321, -0.65581624,  0.54409934,  0.64045477]]),\n",
+       " array([[ 0.27761295, -1.37568804, -0.19701171,  1.96404364],\n",
+       "        [ 1.34709228, -0.18575005, -1.79424672,  1.09867718],\n",
+       "        [-1.32280189, -0.25425963, -0.90931376,  0.14677306]]),\n",
+       " array([[-1.11444672, -1.65306457,  0.89047212, -0.61710707],\n",
+       "        [ 2.02455165,  1.75687663, -0.60201138, -0.63228661],\n",
+       "        [ 0.99130141,  1.3128138 , -3.03273125,  2.25170282]]),\n",
+       " array([[ 0.60005251, -1.47030966,  1.92513207,  0.40625477],\n",
+       "        [ 1.28073147, -0.10673411,  0.1069891 ,  0.70748615],\n",
+       "        [ 1.55466346, -1.04398191, -1.36286536,  1.24432553]]),\n",
+       " array([[-0.80250525, -1.24229176, -0.57071862,  1.23091134],\n",
+       "        [-0.30253573, -1.31345756, -0.24464665,  0.15509139],\n",
+       "        [ 0.64048026, -0.97788259,  0.47163712,  0.04702969]]),\n",
+       " array([[ 3.77156738,  2.74185072,  0.26727914,  0.57040854],\n",
+       "        [-0.64527885, -1.41991868, -0.08421774, -1.01371156],\n",
+       "        [ 0.13599771,  0.22352621,  2.38444322,  1.12436919]]),\n",
+       " array([[ 1.13164456,  1.05904792,  1.77586504,  0.33943485],\n",
+       "        [-0.07814418, -0.06820427,  1.79446745, -0.13098055],\n",
+       "        [-0.0203049 ,  0.0271554 ,  0.84610284, -0.3446153 ]])]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrays = [np.random.randn(3, 4) for _ in range(10)]\n",
+    "arrays"
    ]
   },
   {
