add new case for 4.4.６

--- a/book_sample/4-4-5-scikit-learn-evaluation.ipynb
+++ b/book_sample/4-4-5-scikit-learn-evaluation.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/charlielee/anaconda3/envs/data/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
-      "  \"avoid this warning.\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "from sklearn.svm import SVC\n",
@@ -31,7 +22,7 @@
     "# 学習データセット、テストデータセットに分割\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=123)\n",
     "# SVMのインスタンス化\n",
-    "svc = SVC()\n",
+    "svc = SVC(gamma=\"auto\")\n",
     "# SVMで学習\n",
     "svc.fit(X_train, y_train)\n",
     "# テストデータセットの予測\n",
